; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_element.c_xml_elem_serialize_to_string.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_element.c_xml_elem_serialize_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8* }

@simplestring_out_fptr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xml_elem_serialize_to_string(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = call i32 @simplestring_init(%struct.TYPE_3__* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @simplestring_out_fptr, align 4
  %11 = bitcast %struct.TYPE_3__* %7 to i8*
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @xml_element_serialize(i32* %9, i32 %10, i8* %11, i32 %12, i32 0)
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32*, i32** %6, align 8
  store i32 %18, i32* %19, align 4
  br label %20

20:                                               ; preds = %16, %3
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %22 = load i8*, i8** %21, align 8
  ret i8* %22
}

declare dso_local i32 @simplestring_init(%struct.TYPE_3__*) #1

declare dso_local i32 @xml_element_serialize(i32*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
